2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (reinitialize-instance-<class>): Don't force a
	class to be unfinalized if finalization already succeeded.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-slots2.lisp (slot-unbound): Restore the error message that was
	thrown away on 2003-05-01.

2004-10-08  Jörg Höhle  <hoehle@users.sourceforge.net>

	Usable control of sharing of FFI pointer validity (aka extent)
	* foreign.d (set_foreign_pointer): fix GC-safety bug; allow both
	entities to be foreign objects other than just foreign-pointer;
	return initial (modified) entity, which is incompatible with SETF
	requirements, but very handy.
	* foreign1.lisp (SETF FOREIGN-POINTER): remove
	(SET-FOREIGN-POINTER): export

2004-10-07  Bruno Haible  <bruno@clisp.org>

	* clos-class1.lisp (shared-initialize-<class>): A clos::direct-slots
	argument overrides the :direct-slots argument.

2004-10-07  Bruno Haible  <bruno@clisp.org>

	* debug.d (read_form): Don't use ls_avail_p to test whether the
	input stream is interactive, since the clear_input call has been
	removed on 2003-01-21.

2004-10-07  Bruno Haible  <bruno@clisp.org>

	Fix crash after check_array() is used, introduced on 2004-05-12.
	* array.d (test_subscripts): Fix invocations of fehler_subscript_type,
	fehler_subscript_range.
	(fehler_index_type, fehler_index_range, test_index): Pass the array
	as argument, not on the STACK.
	(subscripts_to_index): Fix invalid STACK accesses.
	(SYS::STORE): Store the checked array in the STACK, for
	storagevector_store.
	(SVREF, SYS::SVSTORE, SYS::%SVSTORE, ROW-MAJOR-AREF,
	SYS::ROW-MAJOR-STORE): Update.
	(ARRAY-IN-BOUNDS-P): Update. Fix invocation of fehler_subscript_type.
	(ARRAY-ROW-MAJOR-INDEX): Fix invalid STACK accesses.
	(fehler_bit_array): Pass the array as argument, not on the STACK.
	(BIT, SBIT, SYS::SET-FILL-POINTER): Update.
	* lispbibl.d (fehler_index_range): Pass the array as argument, not on
	the STACK.
	* stream.d (FILE-POSITION): Update.